erDiagram
    USERS {
        INT user_id PK
        VARCHAR email
        VARCHAR role
        BOOLEAN is_verified
    }

    CUSTOMER_PROFILES {
        INT customer_id PK
        INT user_id FK
        VARCHAR first_name
        VARCHAR last_name
    }

    WORKER_PROFILES {
        INT worker_id PK
        INT user_id FK
        VARCHAR first_name
        VARCHAR last_name
    }

    SUPPLIER_PROFILES {
        INT supplier_id PK
        INT user_id FK
        VARCHAR business_name
    }

    PASSWORD_RECOVERY {
        INT id PK
        INT user_id FK
        VARCHAR token
        DATETIME expires_at
    }

    USERS ||--|| CUSTOMER_PROFILES : "has profile"
    USERS ||--|| WORKER_PROFILES : "has profile"
    USERS ||--|| SUPPLIER_PROFILES : "has profile"
    USERS ||--o{ PASSWORD_RECOVERY : "may request"
